tests/namespace/namespace.exp
Error --------------------------------------------------------------------------------------------------- client.js:3:19

Cannot assign `ns.foo` to `bar` because number [1] is incompatible with string [2].

   client.js:3:19
    3| var bar: string = ns.foo
                         ^^^^^^

References:
   namespace.js:17:30
   17| module.exports = { foo: ("": number) };
                                    ^^^^^^ [1]
   client.js:3:10
    3| var bar: string = ns.foo
                ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ namespace.js:3:23

Cannot assign function to `f` because string [1] is incompatible with number [2] in the first argument.

   namespace.js:3:23
   3| var f: T = function(x:string): void { }
                            ^^^^^^ [1]

References:
   namespace.js:2:13
   2| type T = (x:number) => void;
                  ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- namespace.js:11:16

Cannot assign `bar(...)` to `y` because string [1] is incompatible with number [2].

   namespace.js:11:16
   11| var y:number = bar(0, x => "");
                      ^^^^^^^^^^^^^^^

References:
   namespace.js:11:28
   11| var y:number = bar(0, x => "");
                                  ^^ [1]
   namespace.js:11:7
   11| var y:number = bar(0, x => "");
             ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- namespace.js:15:16

Cannot assign array literal to `s2` because string [1] is incompatible with number [2] in array element of array
element.

   namespace.js:15:16
   15| var s2:Seq = [[""]];
                      ^^ [1]

References:
   namespace.js:13:12
   13| type Seq = number | Array<Seq>;
                  ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- namespace.js:17:26

Cannot cast empty string to number because string [1] is incompatible with number [2].

   namespace.js:17:26
   17| module.exports = { foo: ("": number) };
                                ^^ [1]

References:
   namespace.js:17:30
   17| module.exports = { foo: ("": number) };
                                    ^^^^^^ [2]



Found 5 errors

Only showing the most relevant union/intersection branches.
To see all branches, re-run Flow with --show-all-branches
